Add second heading to MapPhoto

--- a/app/views/map_photos/show.html.erb
+++ b/app/views/map_photos/show.html.erb
@@ -1,4 +1,5 @@
 <h1> A Map Photo </h1>
+<h2> Add a Map Photo</h2>
 <img src="<%= @map_photo.map_photo.url(:original) %>" id="img1" exif="true" name="ladeda">
 <div id="map"></div>
 <%= link_to "Delete", @map_photo, :method => :delete %>
