--- a/app/views/map_trips/show.html.erb
+++ b/app/views/map_trips/show.html.erb
@@ -3,6 +3,7 @@
 </style>
 <h1><%= @map_trip.title %></h1>
 <h3><%= @map_trip.description %> </h3>
+<h4> By: <%= @map_trip.user_id %> </h4>
 <%= link_to "Delete", @map_trip, :method => :delete %>
 <div id="content">
   <div id="map"></div>
