added funny message to new trip page

--- a/app/views/map_trips/new.html.erb
+++ b/app/views/map_trips/new.html.erb
@@ -1,4 +1,5 @@
 <h1>New Map Trip</h1>
+<h2> Where did you go? </h2>
 <form action="<%= map_trips_url %>" method="POST" >
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
 
