--- a/app/assets/stylesheets/map_trips.css.scss
+++ b/app/assets/stylesheets/map_trips.css.scss
@@ -2,12 +2,14 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .galleria {
+  height: 525px;
+  width: 700px;
   border: 0px solid #d8d8d8;
   -webkit-border-radius: 10px;
   border-radius: 10px;
   background-color: #fff;
   border-bottom-width: 3px;
-  margin: 10px;
+  margin: 2px;
   float: left;
 }
 
@@ -15,14 +17,19 @@
   clear: both;
 }
 
+#trip_info {
+  clear: both;
+}
+
+
 #map { 
   border: 1px solid #d8d8d8;
   -webkit-border-radius: 10px;
   border-radius: 10px;
   background-color: #fff;
   border-bottom-width: 3px;
-  margin: 10px;
+  margin: 2px;
   float: left;
-  height: 450px; 
-  width: 450px;
+  height: 525px; 
+  width: 525px;
 }
