fixed show hide issue

--- a/app/views/map_trips/show.html.erb
+++ b/app/views/map_trips/show.html.erb
@@ -65,8 +65,9 @@
         var galleria = $(".galleria").data('galleria');
         galleria.show(e.layer.feature.properties["slideIndex"]);
       });
-      $(".show_hide_button").on("click", function(e) {
-        event.preventDefault();
+      $("a.show_hide_button").on("click", function(e) {
+        e.preventDefault();
+
         var button = $(e.target);
         var current_text = button.text();
         if (current_text == "Show Photo Loader") {
@@ -205,7 +206,7 @@
   </script>
 
 <br>
-<a href="" class="show_hide_button">Hide Photo Loader</a>
+<a href="#" class="show_hide_button">Hide Photo Loader</a>
 <div class="container" id="photo_loader">
   <h3> Add Map Photos </h3>
   <%= form_for MapPhoto.new, :html => { :multipart => true, :id => "fileupload"  } do |f| %>
