--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,16 +3,16 @@
 <head>
   <title>MapBlog</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <!-- <%= javascript_include_tag "application" %> -->
   <%= csrf_meta_tags %>
 </head>
 <body>
   <div class="container">
     <% if current_user %>
-      <%= button_to "Sign Out", session_url, method: :delete %>
+      <%= button_to "Sign Out", session_url, method: :delete, class: :btn %>
     <% else %>
-      <a href="<%= new_session_url %>">Sign In</a>
-      <a href="<%= new_user_url %>">Sign Up</a>
+      <a href="<%= new_session_url %>" class="btn">Sign In</a>
+      <a href="<%= new_user_url %>" class="btn">Sign Up</a>
     <% end %>
     <% if flash[:errors] %>
       <% flash[:errors].each do |error| %>
