--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,12 +1,17 @@
 <h2>Sign Up</h2>
-<form action="<%= users_url %>" method="POST">
+<form action="<%= users_url %>" method="POST" accept-charset="UTF-8" enctype="multipart/form-data" >
   <input type="hidden" name="autheticity_token" value="<%= form_authenticity_token %>">
 
   <input type="text" name="user[email]" placeholder="Email">
   <br>
 
+  <input type="text" name="user[username]" placeholder="Username">
+  <br>
+
   <input type="password" name="user[password]" placeholder="Password">
   <br>
+  
+  <input name="user[user_photo]" type="file">
 
   <input type="submit" value="Sign Up">
 </form>
