start of user interface

--- a/app/assets/stylesheets/map_trips.css.scss
+++ b/app/assets/stylesheets/map_trips.css.scss
@@ -55,3 +55,9 @@ textarea.new_comment {
 li.media {
   margin-top: 10px;
 }
+
+div.map_trip_buttons {
+  display: inline;
+  float: right;
+  vertical-align: middle;
+}
