--- a/app/assets/templates/map_trips/index.jst.ejs
+++ b/app/assets/templates/map_trips/index.jst.ejs
@@ -1,2 +1,14 @@
-<div class="map_trips">
+<div class="row">
+<a href="#/new" class="btn">New Map Trip</a>
 </div>
+<div class="row">
+  <div class="span3">
+  </div>
+  <div class="map_trips span6">
+  <h3>Your Map Trips</h3>
+  <hr>
+  </div>
+  <div class="span3">
+  </div>
+</div>
+
