--- a/app/assets/templates/map_trips/index.jst.ejs
+++ b/app/assets/templates/map_trips/index.jst.ejs
@@ -2,13 +2,27 @@
 <a href="#/new" class="btn">New Map Trip</a>
 </div>
 <div class="row">
-  <div class="span3">
+  <div class="span2">
   </div>
-  <div class="map_trips span6">
-  <h3>Your Map Trips</h3>
-  <hr>
+  <div class="span8">
+    <h3>Your Map Trips</h3>
+    <hr>
+    <div class="map_trips">
+    </div>
   </div>
-  <div class="span3">
+  <div class="span2">
   </div>
 </div>
 
+<div class="row">
+  <div class="span2">
+  </div>
+  <div class="span8">
+    <h3>Public Map Trips</h3>
+    <hr>
+    <div class="public_map_trips">
+    </div>
+  </div>
+  <div class="span2">
+  </div>
+</div>
