--- a/app/views/map_trips/index.html.erb
+++ b/app/views/map_trips/index.html.erb
@@ -2,6 +2,9 @@
 <script type="application/json" id="map-trips-data"><%= (render('map_trips/indexJSON', :formats => [:json], :handlers => [:rabl])).html_safe %></script>
 
 <!-- Removed all whitespace so when checking in backbone initialize I don't see any whitespace -->
+<script type="application/json" id="public-map-trips-data"><%= (render('map_trips/publicMapTripsJSON', :formats => [:json], :handlers => [:rabl])).html_safe %></script>
+
+<!-- Removed all whitespace so when checking in backbone initialize I don't see any whitespace -->
 <script type="application/json" id="user-data"><%= ((render('users/user', :formats => [:json], :handlers => [:rabl])).html_safe)  if @current_user %></script>
 <div class="content"></div>
 
