--- a/app/assets/templates/map_trips/new_edit.jst.ejs
+++ b/app/assets/templates/map_trips/new_edit.jst.ejs
@@ -9,8 +9,8 @@
   <br>
 
   <label>Sharing</label>
-  <input type="radio" name="map_trip[shared]" value="true" <%= publicCheckedValue %> >Public<br>
-  <input type="radio" name="map_trip[shared]" value="false" <%= privateCheckedValue %>>Private<br>
+  <input type="radio" name="map_trip[shared]" value=true <%= publicCheckedValue %> >Public<br>
+  <input type="radio" name="map_trip[shared]" value=false <%= privateCheckedValue %>>Private<br>
 
   <input type="submit" value="<%= buttonText %>">
 </form>
