--- a/app/assets/templates/map_trips/index.jst.ejs
+++ b/app/assets/templates/map_trips/index.jst.ejs
@@ -1,10 +1,10 @@
 <div class="row">
-<a href="#/new" class="btn">New Map Trip</a>
 </div>
 <div class="row">
   <div class="span2">
   </div>
-  <div class="span8">
+  <div class="span8 transparent-background">
+    <a href="#/new" class="btn btn-primary pull-right"><i class="fa fa-plus"></i> Map Trip</a>
     <h3>Your Map Trips</h3>
     <hr>
     <div class="map_trips">
@@ -17,7 +17,7 @@
 <div class="row">
   <div class="span2">
   </div>
-  <div class="span8">
+  <div class="span8 transparent-background">
     <h3>Public Map Trips</h3>
     <hr>
     <div class="public_map_trips">
