--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,5 +11,6 @@
  *= require_self
  *= require jquery.fileupload-ui
  *= require galleria.classic
+ *= require font-awesome
  *= require_tree .
  */
