--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -28,7 +28,61 @@
 //
 // Example:
 // @linkColor: #ff0000;
+@textColor: #FFFFFF;
+
+body {
+  background: url("BackgroundMap.jpg");
+}
+
+div.navbar-inner {
+  background: url("background.png");
+  border: 0px;
+}
+
+div.transparent-background{
+  background: url("background.png");
+  border: 0px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border-bottom-width: 3px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+div.sign-in{
+  background: url("background.png");
+  border: 0px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border-bottom-width: 3px;
+}
+
+div.sign-in-content{
+  width: 220px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+div.new-map-trip-content{
+  width: 250px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div.nav.nav-buttons {
+  font-size: 24px;
+  margin-top: 17px;
+}
+
+legend {
+  color: #FFF;
+}
 
 [class*="span"] {
-margin-left: 5px;
+  margin-left: 10px;
+}
+.row {
+  margin-left: 0px;
 }
