--- a/app/assets/templates/map_trips/detail.jst.ejs
+++ b/app/assets/templates/map_trips/detail.jst.ejs
@@ -1,15 +1,19 @@
-<h1><%= mapTrip.escape("title") %></h1>
-<div class="row">
-  <div class="span5">
-    <div id="map"></div>
+<div class="transparent-background">
+  <h2><%= mapTrip.escape("title") %></h2>
+  <div class="row">
+    <div class="span5">
+      <div id="map"></div>
+    </div>
+    <div class="span7">
+      <div class="galleria">
+    </div>
   </div>
-  <div class="span7">
-    <div class="galleria">
+
+  <div id="trip_info">
+    <h4><%= mapTrip.escape("description") %> </h4>
   </div>
 </div>
-<div id="trip_info">
-  <h4><%= mapTrip.escape("description") %> </h4>
-</div>
+
   <script>
     $(document).ready(function() {
       var selectedColor = "#a0e5ce";
@@ -27,13 +31,14 @@
     };
 
   </script>
-  <a class="btn btn-primary" href="#/<%= mapTrip.id %>/edit">Edit</a>
+  <a class="btn btn-primary pull-right" href="#/<%= mapTrip.id %>/edit">Edit</a>
 
   <div class="comments">
     <ul class="media-list comments">
     </ul>
   </div>
 <div class="container" id="photo_loader">
+</div>
 </div>
 
 <script type="text/javascript" charset="utf-8">
