--- a/app/assets/templates/map_trips/photo_loader.jst.ejs
+++ b/app/assets/templates/map_trips/photo_loader.jst.ejs
@@ -36,7 +36,7 @@
   <div class="fileupload-loading"></div>
   <br>
   <!-- The table listing the files available for upload/download -->
-  <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
+  <table class="table table-striped photo-loader-table"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
   </table>
 </form>
 
@@ -80,7 +80,7 @@
       {% if (file.error) { %}
         <td></td>
         <td class="name"><span>{%=file.name%}</span></td>
-        <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
+        <!-- <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td> -->
         <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
         {% } else { %}
         <td class="preview">{% if (file.thumbnail_url) { %}
@@ -89,8 +89,8 @@
         <td class="name">
           <a href="{%=file.url%}" title="{%=file.name%}" rel="{%=file.thumbnail_url&&'gallery'%}" download="{%=file.name%}">{%=file.name%}</a>
         </td>
-        <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
-        <td colspan="2"></td>
+        <!-- <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td> -->
+        <!-- <td colspan="2"></td> -->
         {% } %}
         <td class="delete">
           <button class="btn btn-danger" data-type="{%=file.delete_type%}" data-url="{%=file.delete_url%}">
