--- a/app/assets/templates/session/new.jst.ejs
+++ b/app/assets/templates/session/new.jst.ejs
@@ -1,7 +1,19 @@
-<form class="sign_in_form">
-  <input type="text" name="user[email]" placeholder="Email">
-  <br>
-  <input type="password" name="user[password]" placeholder="Password">
-  <br>
-  <input class="btn" type="submit" value="Sign In">
-</form>
+<div class="span4">
+</div>
+<div class="span4 sign-in">
+  <div class="sign-in-content">
+    <h2>Sign In</h2>
+    <form class="sign_in_form">
+      <input type="text" name="user[email]" placeholder="Email">
+      <br>
+      <input type="password" name="user[password]" placeholder="Password">
+      <br>
+      <br>
+      <input class="btn" type="submit" value="Sign In">
+    </form>
+    <a href="#users/new">Sign Up Today</a>
+    
+  </div>
+</div>
+<div class="span4">
+</div>
