--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,18 @@
 </head>
 <body>
   <div class="container">
-    <% if current_user %>
-      <%= button_to "Sign Out", session_url, method: :delete, class: :btn %>
-    <% else %>
-      <a href="<%= new_session_url %>" class="btn">Sign In</a>
-      <a href="<%= new_user_url %>" class="btn">Sign Up</a>
-    <% end %>
+    <div class="navbar">
+      <div class="navbar-inner">
+        <h1>Map Blog</h1>
+        <div class="nav pull-right">
+        <% if current_user %>
+          <%= button_to "Sign Out", session_url, method: :delete %>
+        <% else %>
+          <a href="#signin"><i class="fa fa-sign-in"></i></a>
+        <% end %>
+        </div>
+      </div>
+    </div>
     <% if flash[:errors] %>
       <% flash[:errors].each do |error| %>
         <h5> <%= error %> </h5>
