first version of styling

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -47,6 +47,7 @@ div.transparent-background{
   border-bottom-width: 3px;
   margin-top: 10px;
   margin-bottom: 10px;
+  padding: 10px 0px;
 }
 
 div.sign-in{
@@ -66,7 +67,7 @@ div.sign-in-content{
 }
 
 div.new-map-trip-content{
-  width: 250px;
+  width: 285px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -85,4 +86,14 @@ legend {
 }
 .row {
   margin-left: 0px;
+}
+div.description {
+  font-size: 17.5px;
+  font-weight: bold;
+  margin: 10px 10px;
+  line-height: 20px;
+  display: inline;
+}
+.standard-padding {
+  padding: 20px;
 }
