--- a/app/assets/stylesheets/map_trips.css.scss
+++ b/app/assets/stylesheets/map_trips.css.scss
@@ -19,8 +19,13 @@
   margin-left: 20px;
 }
 
+.standard-left-margin {
+  margin-left: 20px;
+}
+
 #trip_info {
   clear: both;
+  margin: 10px 10px;
 }
 
 #map { 
