--- a/app/assets/templates/map_trips/index.jst.ejs
+++ b/app/assets/templates/map_trips/index.jst.ejs
@@ -4,10 +4,12 @@
   <div class="span2">
   </div>
   <div class="span8 transparent-background">
-    <a href="#/new" class="btn btn-primary pull-right"><i class="fa fa-plus"></i> Map Trip</a>
-    <h3>Your Map Trips</h3>
-    <hr>
-    <div class="map_trips">
+    <div class="standard-padding">
+      <a href="#/new" class="btn btn-primary pull-right"><i class="fa fa-plus"></i> Map Trip</a>
+      <h3>Your Map Trips</h3>
+      <hr>
+      <div class="map_trips">
+      </div>
     </div>
   </div>
   <div class="span2">
@@ -18,9 +20,11 @@
   <div class="span2">
   </div>
   <div class="span8 transparent-background">
-    <h3>Public Map Trips</h3>
-    <hr>
-    <div class="public_map_trips">
+    <div class="standard-padding">
+      <h3>Public Map Trips</h3>
+      <hr>
+      <div class="public_map_trips">
+      </div>
     </div>
   </div>
   <div class="span2">
