--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <div class="navbar">
       <div class="navbar-inner">
         <h1>Map Blog</h1>
-        <div class="nav pull-right">
+        <div class="nav pull-right nav-buttons">
         <% if current_user %>
           <%= button_to "Sign Out", session_url, method: :delete %>
         <% else %>
