--- a/app/assets/stylesheets/map_trips.css.scss
+++ b/app/assets/stylesheets/map_trips.css.scss
@@ -62,10 +62,44 @@ li.media {
   margin-top: 10px;
 }
 
-div.map_trip_buttons {
+div.map-trip-buttons {
   display: inline;
   float: right;
   vertical-align: middle;
+}
+div.nav-buttons {
+  display: inline;
+  float: right;
+  vertical-align: middle;
+}
+img.map-trip-img {
+  height: 32px;
+  width: 32px;
+  border: 0px solid #d8d8d8;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+img.nav-img {
+  height: 32px;
+  width: 32px;
+  border: 0px solid #d8d8d8;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+}
+a.map-trip-link {
+  margin-left: 5px;
+}
+.nav-buttons p {
+  display: inline;
+  font-size: 14px;
+  vertical-align: middle;
+}
+.sign-out-button {
+  vertical-align: middle;
+}
+hr {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 div.comments {
   margin-left: 20px;
