--- a/app/assets/templates/session/new.jst.ejs
+++ b/app/assets/templates/session/new.jst.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="span4 sign-in">
   <div class="sign-in-content">
-    <h2>Sign In</h2>
+    <h3>Sign In</h3>
     <form class="sign_in_form">
       <input type="text" name="user[email]" placeholder="Email">
       <br>
@@ -11,7 +11,7 @@
       <br>
       <input class="btn" type="submit" value="Sign In">
     </form>
-    <a href="#users/new">Sign Up Today</a>
+    <h5><a href="#users/new">Sign Up Today!</a></h5>
     
   </div>
 </div>
